# synthetizer

./: .gitignore  Dockerfile  Readme.md  audioworklet.tsconfig.json  index.html  nginx.conf  package-lock.json  package.json  style.css  tsconfig.json
public/: audio_worket_manager.js
src/app/: app_bootstrap.ts
src/components/: synth_component.ts
src/midi/: midi_controller_service.ts
src/sound/: audio_engine_orchestrator.ts  audio_worket_manager.ts  rustWorker.ts  sampler_processor_worker.ts  synth_api_service.ts
src/sound/rust-sample-processor/src/: lib.rs
src/sound/rust-synth/: Cargo.toml
src/sound/rust-synth/src/: api.rs  audio_processor.rs  buffers.rs  constants.rs  dsp_effects.rs  global.rs  lib-passed.rs  lib.rs  mixer.rs  note.rs  note_manager.rs  oscillator.rs  toolkit.rs  types.rs  wave_gen.rs
src/sound/rust-synth/src/shared_memory/: shared_buffers.rs
src/sound/rust-synth/src/sound_engine/: event_handler.rs  processor.rs
src/sound/rust-synth/src/sound_engine/dsp/: fx.rs  mixer.rs
src/sound/rust-synth/src/sound_engine/synthetizer/: mod.rs  note.rs  note_manager.rs  oscillator.rs  sample_manager.rs  sampler.rs  wave_generation.rs
src/sound/rust-synth/src/utils/: constants.rs  types.rs
