[package]
name = "rust-synth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
once_cell = "1.21.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.80", features = ["console", "Window", "WorkerGlobalScope"] }

[profile.release]
opt-level = "z"   
lto = true         
codegen-units = 1
